--- a/stylesheet/css/style.css
+++ b/stylesheet/css/style.css
@@ -4,7 +4,6 @@ body {
 main {
   margin: 0 auto;
   width: 310px;
-  border: 1px solid white;
   height: 650px; }
 
 .hex, .empty, .colorA, .colorB, #answer {
@@ -24,7 +23,8 @@ main {
     background: #f6df0e;
     text-align: center;
     line-height: 100px;
-    font-size: 60px; }
+    font-size: 60px;
+    font-family: 'Roboto'; }
   .hex .right, .empty .right, .colorA .right, .colorB .right, #answer .right {
     float: left;
     width: 0;
