--- a/stylesheet/scss/style.scss
+++ b/stylesheet/scss/style.scss
@@ -37,7 +37,7 @@ main
 	    text-align: center;
 	 	line-height: 100px;
 	 	font-size: 60px;
-  		
+  		font-family: 'Roboto';
     }
     .right
     {
